--- a/catkin_ws/src/robot_python/ui/armctr_form1.ui
+++ b/catkin_ws/src/robot_python/ui/armctr_form1.ui
@@ -138,13 +138,13 @@
         <property name="geometry">
          <rect>
           <x>80</x>
-          <y>180</y>
+          <y>230</y>
           <width>401</width>
           <height>41</height>
          </rect>
         </property>
         <property name="text">
-         <string>/home/d/catkin_ws/src/robot_python/data/robots/armctr/armt_postion.txt</string>
+         <string>/home/d/catkin_ws/src/robot_python/data/robots/armctr/armt_position.txt</string>
         </property>
        </widget>
        <widget class="QLineEdit" name="lineEdit_path">
@@ -164,7 +164,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>230</y>
+          <y>280</y>
           <width>71</width>
           <height>33</height>
          </rect>
@@ -177,20 +177,20 @@
         <property name="geometry">
          <rect>
           <x>80</x>
-          <y>230</y>
+          <y>280</y>
           <width>401</width>
           <height>41</height>
          </rect>
         </property>
         <property name="text">
-         <string>/home/d/catkin_ws/src/robot_python/data/robots/armctr/armc_postion.txt</string>
+         <string>/home/d/catkin_ws/src/robot_python/data/robots/armctr/armc_position.txt</string>
         </property>
        </widget>
        <widget class="QLabel" name="label_31">
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>180</y>
+          <y>230</y>
           <width>71</width>
           <height>33</height>
          </rect>
@@ -203,7 +203,7 @@
         <property name="geometry">
          <rect>
           <x>80</x>
-          <y>30</y>
+          <y>80</y>
           <width>401</width>
           <height>41</height>
          </rect>
@@ -216,7 +216,7 @@
         <property name="geometry">
          <rect>
           <x>80</x>
-          <y>80</y>
+          <y>130</y>
           <width>401</width>
           <height>41</height>
          </rect>
@@ -229,7 +229,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>30</y>
+          <y>80</y>
           <width>71</width>
           <height>33</height>
          </rect>
@@ -242,7 +242,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>80</y>
+          <y>130</y>
           <width>61</width>
           <height>33</height>
          </rect>
@@ -262,58 +262,6 @@
         </property>
         <property name="text">
          <string>读取数据栏</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="lineEdit_f_armr">
-        <property name="geometry">
-         <rect>
-          <x>80</x>
-          <y>130</y>
-          <width>401</width>
-          <height>41</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>/home/d/catkin_ws/src/robot_python/data/robots/armctr/armr_force.txt</string>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_35">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>130</y>
-          <width>61</width>
-          <height>33</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>f_armr:</string>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_36">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>280</y>
-          <width>71</width>
-          <height>33</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>qq_armr:</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="lineEdit_qq_armr">
-        <property name="geometry">
-         <rect>
-          <x>80</x>
-          <y>280</y>
-          <width>401</width>
-          <height>41</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>/home/d/catkin_ws/src/robot_python/data/robots/armctr/armr_postion.txt</string>
         </property>
        </widget>
        <widget class="QPushButton" name="button_read">
@@ -363,9 +311,9 @@
         <widget class="QRadioButton" name="radioButton_armt">
          <property name="geometry">
           <rect>
-           <x>10</x>
+           <x>100</x>
            <y>30</y>
-           <width>71</width>
+           <width>61</width>
            <height>25</height>
           </rect>
          </property>
@@ -376,9 +324,9 @@
         <widget class="QRadioButton" name="radioButton_armc">
          <property name="geometry">
           <rect>
-           <x>90</x>
+           <x>180</x>
            <y>30</y>
-           <width>71</width>
+           <width>61</width>
            <height>25</height>
           </rect>
          </property>
@@ -405,7 +353,7 @@
         <widget class="QRadioButton" name="radioButton_armr">
          <property name="geometry">
           <rect>
-           <x>170</x>
+           <x>20</x>
            <y>30</y>
            <width>61</width>
            <height>25</height>
@@ -415,6 +363,58 @@
           <string>armr</string>
          </property>
         </widget>
+       </widget>
+       <widget class="QLineEdit" name="lineEdit_f_armr">
+        <property name="geometry">
+         <rect>
+          <x>80</x>
+          <y>30</y>
+          <width>401</width>
+          <height>41</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>/home/d/catkin_ws/src/robot_python/data/robots/armctr/armr_force.txt</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_35">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>30</y>
+          <width>61</width>
+          <height>33</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>f_armr:</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="lineEdit_qq_armr">
+        <property name="geometry">
+         <rect>
+          <x>80</x>
+          <y>180</y>
+          <width>401</width>
+          <height>41</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>/home/d/catkin_ws/src/robot_python/data/robots/armctr/armr_position.txt</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_36">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>180</y>
+          <width>71</width>
+          <height>33</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>qq_armr:</string>
+        </property>
        </widget>
       </widget>
      </item>
@@ -574,59 +574,11 @@
          <bool>true</bool>
         </property>
        </widget>
-       <widget class="QWidget" name="layoutWidget_2">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>190</y>
-          <width>221</width>
-          <height>101</height>
-         </rect>
-        </property>
-        <layout class="QVBoxLayout" name="verticalLayout_4">
-         <item>
-          <widget class="QFrame" name="frame_8">
-           <property name="frameShape">
-            <enum>QFrame::StyledPanel</enum>
-           </property>
-           <property name="frameShadow">
-            <enum>QFrame::Raised</enum>
-           </property>
-           <widget class="QCheckBox" name="checkBox_real">
-            <property name="geometry">
-             <rect>
-              <x>20</x>
-              <y>20</y>
-              <width>161</width>
-              <height>22</height>
-             </rect>
-            </property>
-            <property name="text">
-             <string>实物勾    仿真默认</string>
-            </property>
-           </widget>
-           <widget class="QCheckBox" name="checkBox_force">
-            <property name="geometry">
-             <rect>
-              <x>20</x>
-              <y>50</y>
-              <width>161</width>
-              <height>21</height>
-             </rect>
-            </property>
-            <property name="text">
-             <string>六维力勾    位置默认</string>
-            </property>
-           </widget>
-          </widget>
-         </item>
-        </layout>
-       </widget>
        <widget class="QPushButton" name="button_receive">
         <property name="geometry">
          <rect>
-          <x>30</x>
-          <y>360</y>
+          <x>40</x>
+          <y>380</y>
           <width>161</width>
           <height>61</height>
          </rect>
@@ -638,6 +590,67 @@
          <bool>true</bool>
         </property>
        </widget>
+       <widget class="QFrame" name="frame_8">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>210</y>
+          <width>219</width>
+          <height>131</height>
+         </rect>
+        </property>
+        <property name="frameShape">
+         <enum>QFrame::StyledPanel</enum>
+        </property>
+        <property name="frameShadow">
+         <enum>QFrame::Raised</enum>
+        </property>
+        <widget class="QCheckBox" name="checkBox_imp">
+         <property name="geometry">
+          <rect>
+           <x>30</x>
+           <y>50</y>
+           <width>161</width>
+           <height>21</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>阻抗勾    位置默认</string>
+         </property>
+        </widget>
+        <widget class="QCheckBox" name="checkBox_force">
+         <property name="geometry">
+          <rect>
+           <x>30</x>
+           <y>90</y>
+           <width>161</width>
+           <height>21</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>六维力勾    位置默认</string>
+         </property>
+        </widget>
+        <widget class="QCheckBox" name="checkBox_real">
+         <property name="geometry">
+          <rect>
+           <x>30</x>
+           <y>10</y>
+           <width>161</width>
+           <height>22</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>实物勾    仿真默认</string>
+         </property>
+        </widget>
+       </widget>
+       <zorder>button_begin</zorder>
+       <zorder>button_stop</zorder>
+       <zorder>button_receive</zorder>
+       <zorder>lineEdit_f_armr</zorder>
+       <zorder>label_35</zorder>
+       <zorder>frame_8</zorder>
       </widget>
      </item>
     </layout>
